# face_encoder

./: .env_template  .gitignore  README.md  docker-compose.yaml  pyproject.toml
database/: config.py  crud.py  database.py  models.py
docs/: conf.py  face_encoder.rst  index.rst  modules.rst  tests.face_encoder.app.rst  tests.utils.helpers.rst  utils.helpers.rst  utils.logger.rst
docs/_build/doctrees/: database.doctree  environment.pickle  face_encoder.app.doctree  face_encoder.doctree  index.doctree  modules.doctree  tests.database.doctree  tests.doctree  tests.face_encoder.app.doctree  tests.face_encoder.doctree  tests.utils.doctree  tests.utils.helpers.doctree  utils.doctree  utils.helpers.doctree  utils.logger.doctree  utils.schema.doctree
docs/_build/html/: .buildinfo  database.html  face_encoder.app.html  face_encoder.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.database.html  tests.face_encoder.app.html  tests.face_encoder.html  tests.html  tests.utils.helpers.html  tests.utils.html  utils.html  (+3 more)
face_encoder/: Dockerfile  __main__.py
face_encoder/app/: app.py
k8/: README.md  env-configmap.yaml
k8/face_encoder_app/: face-encoder-app-deployment.yaml  face-encoder-app-service.yaml
k8/face_encoding/: face-encoding-deployment.yaml  face-encoding-service.yaml
k8/postgresql/: postgresql-deployment.yaml  postgresql-service.yaml
tests/database/: test_crud.py  test_database.py
utils/helpers/: api_utils.py  session_utils.py
utils/logger/: logger.py
utils/schema/: face_encoder_schema.py
(+9 files in other folders)
