[tool.poetry]
name = "face-encoder"
version = "0.1.0"
description = ""
authors = ["Vinicius Amaro <vpilotoamaro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.face_encoder.dependencies]
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
requests = "^2.31.0"
pydantic = "^2.6.4"
sqlmodel = "^0.0.16"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
